--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "atdev/rocket-chat",
+	"name": "viper-vlad/rocket-chat-php-wrapper",
 	"description": "Rocket Chat REST API PHP Wrapper Library",
 	"keywords": ["rocketchat", "rest", "api"],
 	"homepage": "https://github.com/alekseykuleshov/rocket-chat",
