--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
 	"license": "MIT",
 	"minimum-stability": "stable",
 	"require": {
-		"php": ">=7.3",
-		"guzzlehttp/guzzle": "~7.0",
+		"php": ">=8.2",
 		"egulias/email-validator": "~2.0",
-		"doctrine/collections": "~1.0"
+		"doctrine/collections": "~1.0",
+		"guzzlehttp/guzzle": "^7.9"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~9.0",
